@@ -3,7 +3,11 @@ l_english:
  IRCK3_earthquake.1.desc:0 "There has been a massive earthquake centered upon Rhodes, with significant damage upon the city.\n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
  IRCK3_earthquake.1.a:0 "We must aid our brethren in Rhodes!"
  IRCK3_earthquake.1.b:0 "It will work itself out in time."
- IRCK3_earthquake.2.t:0 "The Quakes in Rhodes"
+ IRCK3_earthquake.2.t:0 "The Quakes on the Coast"
  IRCK3_earthquake.2.desc:0 "There has been a massive earthquake on the coasts of Galicia and northern Lustiniania that caused a tsunami.\n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
  IRCK3_earthquake.2.a:0 "We must aid our brethren on the coasts!"
  IRCK3_earthquake.2.b:0 "It will work itself out in time."
+ IRCK3_earthquake.3.t:0 "The Quakes in Asia Minor"
+ IRCK3_earthquake.3.desc:0 "There has been a massive earthquake in Asia Minor. It occurred during the night and it affected a series of famous cities.\n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
+ IRCK3_earthquake.3.a:0 "We must aid our brethren in the damaged cities!"
+ IRCK3_earthquake.3.b:0 "It will work itself out in time."
